force-app/main/default/objects/FSM_TMAPermitNoticePeriods__c/FSM_TMAPermitNoticePeriods__c.object-meta.xml
<CustomObject>
    <label>TMA Permit Notice Period</label>
    <nameField>
        <displayFormat>NP-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TMA Permit Notice Periods</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>