force-app/main/default/objects/FSM_TMAPermitNoticePeriods__c/fields/FSM_HighwayAuthority__c.field-meta.xml
<CustomField>
    <fullName>FSM_HighwayAuthority__c</fullName>
    <description>created as part of sfs-4791</description>
    <label>Highway Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Highway_authority</valueSetName>
    </valueSet>
</CustomField>