force-app/main/default/objects/FSM_TMAPermitNoticePeriods__c/fields/FSM_NoticePeriod__c.field-meta.xml
<CustomField>
    <fullName>FSM_NoticePeriod__c</fullName>
    <label>Notice Period</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>