force-app/main/default/objects/FSM_TMAPermitNoticePeriods__c/fields/FSM_NoticePeriodThreshold__c.field-meta.xml
<CustomField>
    <fullName>FSM_NoticePeriodThreshold__c</fullName>
    <description>updated label as part of sfs-4791</description>
    <label>Minimum Notice Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>