force-app/main/default/objects/FSM_TMAPermitNoticePeriods__c/fields/FSM_WorksCategory__c.field-meta.xml
<CustomField>
    <fullName>FSM_WorksCategory__c</fullName>
    <description>created as part of sfs-4791</description>
    <label>Works Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Works_Category</valueSetName>
    </valueSet>
</CustomField>