force-app/main/default/objects/FSM_TMAPermitNoticePeriods__c/validationRules/FSM_CannotModifyTMANoticePeriodRecord.validationRule-meta.xml
<ValidationRule>
    <fullName>FSM_CannotModifyTMANoticePeriodRecord</fullName>
    <active>true</active>
    <description>SFS-4807</description>
    <errorConditionFormula>NOT($Permission.FSM_EditTMANoticePeriod)</errorConditionFormula>
    <errorMessage>You don&apos;t have sufficient privilege to edit this record, please contact salesforce administrator.</errorMessage>
</ValidationRule>