force-app/main/default/objects/FSM_TMAPermitNoticePeriods__c/validationRules/Notice_Period_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Notice_Period_Validation_Rule</fullName>
    <active>true</active>
    <description>Created as a part of SFS-4807</description>
    <errorConditionFormula>FSM_NoticePeriod__c  &lt;  FSM_NoticePeriodThreshold__c</errorConditionFormula>
    <errorDisplayField>FSM_NoticePeriod__c</errorDisplayField>
    <errorMessage>Notice period cannot be amended below threshold value</errorMessage>
</ValidationRule>