force-app/main/default/objects/FSM_TMAPermitNoticePeriods__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FSM_HighwayAuthority__c</columns>
    <columns>FSM_NoticePeriod__c</columns>
    <columns>FSM_NoticePeriodThreshold__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>FSM_WorksCategory__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>